# QApi

./: CMakeLists.txt  QApi_global.h  README.md  README_FR.md  qapi.cpp  qapi.h
QApiTest/: CMakeLists.txt  tst_testapi.cpp
